--- a/CollectionViewSample/CVCompositionalLayoutSample/CVCompositionalLayoutSample.storyboard
+++ b/CollectionViewSample/CVCompositionalLayoutSample/CVCompositionalLayoutSample.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
+        <!--CompositionalLayout-->
         <scene sceneID="HRo-Ho-g6E">
             <objects>
                 <viewController id="8iX-kT-Bbq" customClass="CVCompositionalLayoutViewController" customModule="CollectionViewSample" customModuleProvider="target" sceneMemberID="viewController">
@@ -27,7 +27,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="10Q-sc-xv5">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="compocell" id="10Q-sc-xv5">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="rG3-qw-nbI">
@@ -47,7 +47,7 @@
                             <constraint firstItem="gX6-vf-OHi" firstAttribute="bottom" secondItem="jKC-6T-MzK" secondAttribute="bottom" id="xkQ-ln-MRV"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="CIV-Xn-Qnm"/>
+                    <tabBarItem key="tabBarItem" title="CompositionalLayout" id="CIV-Xn-Qnm"/>
                     <connections>
                         <outlet property="collectionView" destination="jKC-6T-MzK" id="nAR-OW-HDk"/>
                     </connections>
@@ -56,17 +56,48 @@
             </objects>
             <point key="canvasLocation" x="28" y="132"/>
         </scene>
-        <!--Item 1-->
+        <!--FlowLayout-->
         <scene sceneID="ZwT-7S-woF">
             <objects>
                 <viewController id="jvX-Cb-mNA" customClass="CVFlowLayoutViewController" customModule="CollectionViewSample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cdH-ED-16b">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="V4f-Nb-vRa">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4xR-VE-eIe">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="flowcell" id="hhZ-bC-enN">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="DEx-oK-fy1">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="nEn-o2-f8y"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="V4f-Nb-vRa" firstAttribute="leading" secondItem="nEn-o2-f8y" secondAttribute="leading" id="VmT-84-Q5C"/>
+                            <constraint firstItem="nEn-o2-f8y" firstAttribute="bottom" secondItem="V4f-Nb-vRa" secondAttribute="bottom" id="dBD-6l-ZMT"/>
+                            <constraint firstItem="nEn-o2-f8y" firstAttribute="trailing" secondItem="V4f-Nb-vRa" secondAttribute="trailing" id="qdc-Tr-M0P"/>
+                            <constraint firstItem="V4f-Nb-vRa" firstAttribute="top" secondItem="nEn-o2-f8y" secondAttribute="top" id="zgZ-I8-RUU"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="9kI-Ky-mde"/>
+                    <tabBarItem key="tabBarItem" title="FlowLayout" id="9kI-Ky-mde"/>
+                    <connections>
+                        <outlet property="collectionView" destination="V4f-Nb-vRa" id="Ssl-6I-ktL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jah-n5-ppQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
