--- a/CollectionViewSample/Base.lproj/Main.storyboard
+++ b/CollectionViewSample/Base.lproj/Main.storyboard
@@ -26,45 +26,52 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ftz-ic-huO">
-                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="129"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="110.5"/>
                                                         <state key="normal" title="ColorSampleView"/>
                                                         <connections>
                                                             <segue destination="00A-GC-NkO" kind="show" id="oVz-Gb-J7c"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJf-NO-95x">
-                                                        <rect key="frame" x="0.0" y="129" width="414" height="129"/>
+                                                        <rect key="frame" x="0.0" y="110.5" width="414" height="110.5"/>
                                                         <state key="normal" title="BasicCollectionView"/>
                                                         <connections>
                                                             <segue destination="Dwt-4j-GvE" kind="show" id="s1U-Rb-ezj"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YiE-jR-ja1">
-                                                        <rect key="frame" x="0.0" y="258" width="414" height="129"/>
+                                                        <rect key="frame" x="0.0" y="221" width="414" height="110.5"/>
                                                         <state key="normal" title="HFCollectionViewCell"/>
                                                         <connections>
                                                             <segue destination="U0U-Xz-3hB" kind="show" id="Ym5-gj-1eK"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xn9-aw-bLz">
-                                                        <rect key="frame" x="0.0" y="387" width="414" height="129"/>
+                                                        <rect key="frame" x="0.0" y="331.5" width="414" height="111"/>
                                                         <state key="normal" title="GridViewSample"/>
                                                         <connections>
                                                             <segue destination="6G0-jh-NAl" kind="show" id="aqW-fl-cZ6"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xif-Oi-igS">
-                                                        <rect key="frame" x="0.0" y="516" width="414" height="129"/>
+                                                        <rect key="frame" x="0.0" y="442.5" width="414" height="110.5"/>
                                                         <state key="normal" title="TableViewの中にCollectionView"/>
                                                         <connections>
                                                             <segue destination="21g-zz-3O7" kind="show" id="tp8-Yy-gXB"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9qN-4n-GJe">
-                                                        <rect key="frame" x="0.0" y="645" width="414" height="129"/>
+                                                        <rect key="frame" x="0.0" y="553" width="414" height="110.5"/>
                                                         <state key="normal" title="CVCompositionalLayoutSample"/>
                                                         <connections>
                                                             <segue destination="vbd-9S-PIU" kind="show" id="7GX-Mc-e6x"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hl4-wn-Anb">
+                                                        <rect key="frame" x="0.0" y="663.5" width="414" height="110.5"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <connections>
+                                                            <segue destination="I8z-V3-PTL" kind="show" id="oSY-eg-Hhr"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -114,7 +121,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fmP-Dp-LP3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1588" y="-109"/>
+            <point key="canvasLocation" x="1628" y="-242"/>
         </scene>
         <!--BasicCollectionView-->
         <scene sceneID="zbV-xx-dnZ">
@@ -124,7 +131,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Mg-3v-dbe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1666" y="21"/>
+            <point key="canvasLocation" x="1656" y="-147"/>
         </scene>
         <!--HFCollectionView-->
         <scene sceneID="SHf-v3-qwR">
@@ -134,7 +141,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nsC-H6-3xe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1678" y="84"/>
+            <point key="canvasLocation" x="1672" y="-72"/>
         </scene>
         <!--GridView-->
         <scene sceneID="8wE-vA-IjE">
@@ -144,7 +151,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="39s-QL-JUO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1607" y="191"/>
+            <point key="canvasLocation" x="1762" y="28"/>
         </scene>
         <!--CVInsideTVViewController-->
         <scene sceneID="FIg-kx-ezN">
@@ -154,7 +161,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fZt-nt-iQQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1686" y="288"/>
+            <point key="canvasLocation" x="1761" y="100"/>
         </scene>
         <!--CVCompositionalLayoutSample-->
         <scene sceneID="31c-b3-y5P">
@@ -164,7 +171,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iM6-dm-hdZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1672" y="420"/>
+            <point key="canvasLocation" x="1732" y="210"/>
+        </scene>
+        <!--instagramUISampleView-->
+        <scene sceneID="i9Z-Ew-bma">
+            <objects>
+                <viewControllerPlaceholder storyboardName="instagramUISampleView" id="I8z-V3-PTL" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="Ufr-ym-d3A"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7M4-4L-FxH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1654" y="306"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="93a-9h-uJt">
