--- a/CollectionViewSample/GridViewSample/GridView.storyboard
+++ b/CollectionViewSample/GridViewSample/GridView.storyboard
@@ -1,49 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0vQ-M1-Lo5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5cU-j9-yQl">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Grid View Controller-->
-        <scene sceneID="RJt-mr-UX9">
+        <!--InstagramUI Sample View Controller-->
+        <scene sceneID="G7q-ye-x4H">
             <objects>
-                <viewController id="0vQ-M1-Lo5" customClass="GridViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="6e5-Ju-qup">
+                <viewController id="5cU-j9-yQl" customClass="instagramUISampleViewController" customModule="CollectionViewSample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9f8-TE-pPk">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wGE-yK-FbV">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ya2-0i-iIl">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Xlh-bn-MmT">
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="P4t-9x-eUy">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells/>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="E0J-dO-vro">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="AlA-hF-gzz">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
                             </collectionView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="qlT-QB-bna"/>
+                        <viewLayoutGuide key="safeArea" id="KT2-Ir-iaG"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="wGE-yK-FbV" firstAttribute="top" secondItem="qlT-QB-bna" secondAttribute="top" id="CtQ-Hs-wb3"/>
-                            <constraint firstItem="qlT-QB-bna" firstAttribute="bottom" secondItem="wGE-yK-FbV" secondAttribute="bottom" id="H55-iH-dDR"/>
-                            <constraint firstItem="wGE-yK-FbV" firstAttribute="leading" secondItem="qlT-QB-bna" secondAttribute="leading" id="VUe-aX-sof"/>
-                            <constraint firstItem="qlT-QB-bna" firstAttribute="trailing" secondItem="wGE-yK-FbV" secondAttribute="trailing" id="ctc-IP-c1A"/>
+                            <constraint firstItem="ya2-0i-iIl" firstAttribute="top" secondItem="KT2-Ir-iaG" secondAttribute="top" id="PLl-SE-c32"/>
+                            <constraint firstItem="KT2-Ir-iaG" firstAttribute="bottom" secondItem="ya2-0i-iIl" secondAttribute="bottom" id="ZUz-82-Jfg"/>
+                            <constraint firstItem="KT2-Ir-iaG" firstAttribute="trailing" secondItem="ya2-0i-iIl" secondAttribute="trailing" id="iu1-kU-rfa"/>
+                            <constraint firstItem="ya2-0i-iIl" firstAttribute="leading" secondItem="KT2-Ir-iaG" secondAttribute="leading" id="zQP-Ld-wEy"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="collectionView" destination="wGE-yK-FbV" id="Dda-yW-MIC"/>
+                        <outlet property="collectionView" destination="ya2-0i-iIl" id="cOe-Ev-FGs"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bi9-qF-7nr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZTO-5Y-xZv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="28" y="145"/>
+            <point key="canvasLocation" x="-273" y="106"/>
         </scene>
     </scenes>
     <resources>
